package json and gitignore files updated

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "doctorspage_webdriverio",
+  "description": "pom with wdio",
+  "private": true,
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "wdio": "wdio run src/config/wdio.conf.js"
+    "test": "wdio run src/config/wdio.conf.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "@wdio/cli": "^9.12.0",
     "@wdio/local-runner": "^9.12.0",
